# cmeel-automake

./: CMakeLists.txt  pyproject.toml
.github/workflows/: release.yml
